jetty 9.4.8 fix #1018 - removed ALPN setup from groovy - add ALPN using maven profiles