@@ -14,7 +14,7 @@
   <name>coverage report</name>
 
   <properties>
-    <alpn-boot-version>8.1.9.v20160720</alpn-boot-version>
+    <alpn-boot.version>8.1.12.v20180117</alpn-boot.version>
   </properties>
 
   <profiles>
@@ -240,7 +240,7 @@
                 <include>**/*Issue*.java</include>
               </includes>
               <argLine>-Xmx1024m -XX:MaxPermSize=256m
-                -Xbootclasspath/p:${settings.localRepository}/org/mortbay/jetty/alpn/alpn-boot/${alpn-boot-version}/alpn-boot-${alpn-boot-version}.jar
+                -Xbootclasspath/p:${settings.localRepository}/org/mortbay/jetty/alpn/alpn-boot/${alpn-boot.version}/alpn-boot-${alpn-boot.version}.jar
               </argLine>
               <systemPropertyVariables>
                 <!-- JaCoCo runtime must know where to dump coverage: -->
@@ -254,7 +254,7 @@
               <dependency>
                 <groupId>org.mortbay.jetty.alpn</groupId>
                 <artifactId>alpn-boot</artifactId>
-                <version>${alpn-boot-version}</version>
+                <version>${alpn-boot.version}</version>
               </dependency>
             </dependencies>
           </plugin>
@@ -283,6 +283,408 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <!-- Jetty ALPN -->
+    <profile>
+      <id>jdk9</id>
+      <activation>
+        <jdk>9</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>-Duser.language=en -Duser.region=US --add-modules java.xml.bind</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+      <dependencies>
+        <dependency>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>jetty-alpn-java-server</artifactId>
+          <version>${jetty.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>jetty-alpn-java-client</artifactId>
+          <version>${jetty.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.0.v20141016</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_05</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_05</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.0.v20141016</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_11</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_11</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.0.v20141016</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_20</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_20</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.0.v20141016</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_25</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_25</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.2.v20141202</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_31</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_31</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.3.v20150130</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_40</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_40</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.3.v20150130</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_45</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_45</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.3.v20150130</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_51</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_51</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.4.v20150727</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_60</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_60</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.5.v20150921</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_65</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_65</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.6.v20151105</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_66</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_66</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.6.v20151105</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_71</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_71</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.7.v20160121</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_72</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_72</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.7.v20160121</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_73</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_73</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.7.v20160121</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_74</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_74</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.7.v20160121</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_77</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_77</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.7.v20160121</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_91</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_91</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.7.v20160121</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_92</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_92</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.8.v20160420</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_101</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_101</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.9.v20160720</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_102</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_102</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.9.v20160720</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_111</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_111</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.9.v20160720</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_112</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_112</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.10.v20161026</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_121</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_121</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.11.v20170118</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_131</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_131</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.11.v20170118</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_141</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_141</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.11.v20170118</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_144</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_144</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.11.v20170118</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_151</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_151</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.11.v20170118</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_152</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_152</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.11.v20170118</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_161</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_161</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.12.v20180117</alpn-boot.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk-1.8.0_162</id>
+      <activation>
+        <property>
+          <name>java.version</name>
+          <value>1.8.0_162</value>
+        </property>
+      </activation>
+      <properties>
+        <alpn-boot.version>8.1.12.v20180117</alpn-boot.version>
+      </properties>
     </profile>
   </profiles>
 
@@ -851,6 +1253,12 @@
     <dependency>
       <groupId>org.eclipse.jetty.http2</groupId>
       <artifactId>http2-client</artifactId>
+      <version>${jetty.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-alpn-openjdk8-client</artifactId>
       <version>${jetty.version}</version>
     </dependency>
 
